--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,35 @@
-body {
-  font-family: "Playfair Display", serif !important;
-  background-color: #f2e9e4 !important;
+.base {
+  font-family: "Playfair Display", serif;
+  background-color: #f2e9e4;
 }
 
 .text-navy,
 .text-body-emphasis,
 .display-5,
+::placeholder,
 h1,
 h2,
 h3,
 h4,
 p {
-  color: #4a4e69 !important;
+  color: #4a4e69;
 }
 
-.input-group,
-.form-control,
-.form-select {
-  background-color: #f2e9e4 !important;
-  border: #4a4e69 !important;
-  color: #4a4e69 !important;
-  border-radius: 0% !important;
+.form-control-styled,
+.form-select-styled {
+  background-color: #f2e9e4;
+  border: #4a4e69;
+  color: #4a4e69;
+  border-radius: 0%;
+  width: 100%;
+  padding: 10px;
+  border-bottom: 1px solid #4a4e69;
 }
 
-.btn-primary {
-  background-color: #9a8c98 !important;
-  border: #9a8c98 !important;
+.btn-primary-gray {
+  color: #fff;
+  padding: 5px 25px;
+  background-color: #9a8c98;
+  border: #9a8c98;
   border-radius: 2px;
 }
